# quantofalta.github.io

./: .gitignore  Cargo.toml  README.md  index.html  index.md  style.css
.github/workflows/: rust.yml
html/: style.css
src/: main.rs
src/testdata/: cases-brazil-states.csv  test.csv
