[package]
name = "quantofalta"
version = "0.1.0"
authors = ["Conrado P. L. Gouvea <conradoplg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15"
tokio = { version = "0.2.8", features = ["time", "macros"] }
text_io = "0.1.8"
serde_json = "1.0"